--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+h2{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 40px;
+}
 .header{
     background-color: #E5E5E5;
 }
@@ -32,7 +37,48 @@ nav{
     text-decoration: none;
     color: #000;
 }
+.inview{
+    margin-left: 8%;
+    margin-right: 8%;
+    border: 3px solid black;
+}
+.menu{
+    background-color: gray;
+}
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    height: 480px;
+    margin-left: 96px;
+}
+.card{
+    display: flex;
+    background-color: white;
+    height: 128px;
+    width: 240px;
+    border-radius: 0px 0px 32px 0px;
+}
+.cardTitle{
+    font-size: medium;
+    font-weight: bold;
+    position: absolute;
+    transform: translateX(64px);
+    padding: 4px;
+}
+.cardText{
+    position: relative;
+    left: -40px;
+    bottom: -16px;
+    font-size: x-small;
+    transform: translateX(-96px);
+    transform: translateY(32px);
+}
+.burger img{
+    position: relative;
+    left: -80px;
+    bottom: -24px;
+    height: 104px;
+    width: auto;
 }
