--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ h2{
     justify-content: space-around;
     padding-top: 40px;
 }
+footer{
+    border: 2px solid black;
+    justify-content: space-between;
+    display: flex;
+}
 .header{
     background-color: #E5E5E5;
 }
