further css styling almost donegit add css/style.css !

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    letter-spacing: 0.8px;
 }
 h2{
     display: flex;
@@ -34,6 +35,8 @@ nav{
     display: flex;
     width: 90%;
     justify-content: space-around;
+    z-index: 2;
+    font-weight: 600;
 }
 .nav-links li{
     list-style: none;
@@ -51,6 +54,9 @@ nav{
 .streetFood{
     margin-left: 96px;
     width: 400px;
+}
+.wefood{
+    font-size: x-large;
 }
 .container{
     display: flex;
