--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,42 @@
     letter-spacing: 0.8px;
 }
 h2{
-    display: flex;
-    justify-content: space-around;
+    text-align: center;
     padding-top: 40px;
     color: #6CB840;
 }
-h2 ::first-letter{
-    color: #000;
+h3{
+    padding-top: 8px;
+    font-size: x-large;
+}
+.scp{
+    text-align: left;
+    font-size: 40px;
+}
+.scp > p{
+    padding-top: 16px;
 }
 footer{
     justify-content: space-between;
     display: flex;
     height: 336px;
     background-color: #C9ECB5;
+}
+input{
+    border: none;
+    padding: 24px;
+    width: 480px;
+    border-radius: 96px;
+    font-weight: 600;
+}
+.green{
+    color: #6CB840;
+}
+.yellow{
+    color: #EAAB1B;
+}
+.black{
+    color: #000;
 }
 .header{
     background-color: #E5E5E5;
@@ -57,6 +80,25 @@ nav{
 }
 .wefood{
     font-size: x-large;
+}
+.now{
+    border: none;
+    padding: 16px;
+    width: 160px;
+    border-radius: 96px;
+    margin-top: 32px;
+    background-color: #6CB840;
+    color: white;
+    font-weight: 600;
+}
+.button1{
+    border: none;
+    padding: 16px;
+    width: 160px;
+    border-radius: 96px;
+    background-color: #6CB840;
+    color: white;
+    font-weight: 600;
 }
 .container{
     display: flex;
@@ -168,6 +210,7 @@ nav{
     flex-grow: 3;
     padding: 48px;
     margin-top: 32px;
+    border-left:dashed;
 }
 .social{
     padding-left: 64px;
@@ -175,5 +218,20 @@ nav{
     flex-grow: 3;
 }
 .icons{
+    margin-top: 40px;
+}
+.icons > div{
     flex-grow: 1;
+    padding-top: 32px;
+}
+.button2{
+    border: none;
+    background-color: #6CB840;
+    color: white;
+    font-weight: 640;
+    width: 56px;
+}
+a{
+    text-decoration: none;
+    color: #000;
 }
